tests/paczka1/fuzzy1/14410333.err
Error in line 2: OkgiYom3 A455 34,31
Error in line 15: HJ2rkI2jZv A223 74,8
Error in line 13: OkgiYom3 A455 108,4
Error in line 16: HJ2rkI2jZv A993 55,8
Error in line 22: HJ2rkI2jZv S196 65,7
Error in line 28: HJ2rkI2jZv A993 66,7
Error in line 35: JnvH A455 45,3
Error in line 38: OkgiYom3 A455 21,5
